--- a/web.css
+++ b/web.css
@@ -1,26 +1,25 @@
-body {
-  font-family: sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-#container {
-  width: 500px;
-  margin: 0 auto;
-}
-
-h1 {
-  text-align: center;
-  font-size: 2em;
-}
-
-input {
+.element {
+  background-color: #ecf0f3;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  margin-bottom: 10px;
 }
 
-#respuesta {
-  font-size: 1.5em;
+.element .banortelogo-wrapper {
+  background-color: #ecf0f3;
+  border: 2px solid;
+  border-color: #000000;
+  height: 812px;
+  position: relative;
+  width: 375px;
+}
+
+.element .banortelogo {
+  height: 267px;
+  left: 28px;
+  object-fit: cover;
+  position: absolute;
+  top: 273px;
+  width: 319px;
 }
